<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="com.apps.kunalfarmah.realtimetictactoe.fragments.HowToPlayFragment">



    <TextView
        android:layout_margin="@dimen/_30sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:textColor="#fff"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_25sdp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="How to Play"/>

    <ScrollView
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        android:layout_width="match_parent"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_height="wrap_content">


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/how_to_play1"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/how_to_play2"

                android:textColor="?android:attr/textColorPrimary"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/how_to_play3"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:gravity="bottom"
                android:text="@string/how_to_play4"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_180sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/_5sdp"
        android:text="@string/smile"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="@dimen/_20sdp" />


</FrameLayout>